src/test/ui/closures/2229_closure_analysis/run_pass/destructure_patterns.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/destructure_patterns.rs:17:13
   |
LL |     let c = #[rustc_capture_analysis] || {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/destructure_patterns.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/destructure_patterns.rs:17:39
   |
LL |       let c = #[rustc_capture_analysis] || {
   |  _______________________________________^
LL | |         let (t1, t2) = t;
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0)] -> ByValue
  --> $DIR/destructure_patterns.rs:18:24
   |
LL |         let (t1, t2) = t;
   |                        ^
note: Capturing t[(1, 0)] -> ByValue
  --> $DIR/destructure_patterns.rs:18:24
   |
LL |         let (t1, t2) = t;
   |                        ^

error: Min Capture analysis includes:
  --> $DIR/destructure_patterns.rs:17:39
   |
LL |       let c = #[rustc_capture_analysis] || {
   |  _______________________________________^
LL | |         let (t1, t2) = t;
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/destructure_patterns.rs:18:24
   |
LL |         let (t1, t2) = t;
   |                        ^
note: Min Capture t[(1, 0)] -> ByValue
  --> $DIR/destructure_patterns.rs:18:24
   |
LL |         let (t1, t2) = t;
   |                        ^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
